# Graunt

./: go.mod  main.go
docs/: ADD_ALGORITHM.md
internal/api/: handler.go
internal/model/: types.go
internal/service/: datastore.go  posttrain.go  pretrain.go  rlhf.go
internal/store/: memory.go
pkg/algorithm/: interface.go  pipeline.go  registry.go
pkg/cluster/: kmeans.go  tfidf.go
pkg/distill/: standard.go
pkg/filter/: entropy.go  minhash.go  ngram.go  readability.go
pkg/minhash/: minhash.go
pkg/naivebayes/: bayes.go
pkg/nlp/: entropy.go  ngram.go
pkg/rewrite/: piimask.go  textbook.go
pkg/synthetic/: constitutional.go  dpo.go  evol.go  fewshot.go
spider/: Cargo.toml  README.md  fuck_bilibili.py  fuck_miyoushe.py  fuck_qq.js  fuck_reddit.py  fuck_rednote.py  fuck_wechat.py  fuck_zhihu.py  fuck_zlibrary.py
spider/src/: main.rs
spider/workers/: zlibrary_proxy.js
