[package]
name = "spider-man"
version = "0.1.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks", "stream", "hickory-dns"] }
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
anyhow = "1.0"
governor = "0.6"
nonzero_ext = "0.3"
log = "0.4"
env_logger = "0.10"
bytes = "1.5"
url = "2.5"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
jemallocator = "0.5"
base64 = "0.21"